fixed z-index of page-welcome

--- a/css/main.css
+++ b/css/main.css
@@ -593,7 +593,7 @@ label.valid{
     section#page-welcome {
     background: url(../img/vardencut.png) #fff no-repeat fixed;
     max-height: 429px;
-        z-index: -10;
+
 }
         .arrow{
     display: none;
